# Text-to-sql

./: .env.example  .gitignore  DATABASE_CONFIG.md  README.md  WORKFLOW_DIAGRAM.html  app.py  example_queries.txt  pyproject.toml  workflow_config.json
data/: README.md  __init__.py  config.json  create_table.sql  generate_synthetic_data.py  load_data.py  load_data.sql
prompts/: industry_sic_prompt.yaml  information_extraction_prompt.yaml  question_generation_prompt.yaml  sql_generation_prompt.yaml
utils/: __init__.py
utils/common/: __init__.py  config.py  config_loader.py  db.py  logger.py
utils/text_to_sql/: __init__.py  industry_mapper.py  llm_client.py  prompt_loader.py  sql_injection_validator.py  sql_validator.py  title_tier_mapper.py  value_utils.py
workflows/: __init__.py  edges.py  memory.py  models.py  state.py  text_to_sql_graph.py
workflows/nodes/: __init__.py  clarification.py  conversation.py  extraction.py  mapping.py  shared.py  sql_generation.py  update.py
